[package]
name = "pact-stub-server"
version = "0.5.3"
edition = "2021"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]
description = "Standalone pact stub server"
homepage = "https://www.pact.io"
repository = "https://github.com/uglyog/pact-stub-server"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
clap = { version = "4.0.18", features = ["env", "std", "cargo"] }
serde = "1.0.137"
serde_json = "1.0.81"
pact_matching = "1.0.7"
pact_verifier = "0.15.2"
pact_models = "1.0.9"
maplit = "1.0.2"
itertools = "0.10.5"
hyper = { version = "0.14.25", features = ["full"] }
http = "0.2.9"
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.28"
base64 = "0.21.0"
regex = "1.7.3"
reqwest = { version = "0.11.16", default-features = false, features = ["json", "rustls-tls-native-roots"] }
tower-service = "0.3.2"
anyhow = "1.0.70"
tracing = { version = "0.1.37", features = [ "log" ] }
tracing-core = "0.1.30"
tracing-subscriber = "0.3.16"

[dev-dependencies]
expectest = "0.12.0"
rand = "0.8.5"
pretty_assertions = "1.3.0"
test-log = "0.2.11"
env_logger = "0.10.0"
trycmd = "0.14.13"
