[package]
name = "pact-stub-server"
version = "0.6.0"
edition = "2021"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]
description = "Standalone pact stub server"
homepage = "https://www.pact.io"
repository = "https://github.com/uglyog/pact-stub-server"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.1"
clap = { version = "4.3.0", features = ["env", "std", "cargo"] }
futures = "0.3.28"
http = "0.2.9"
hyper = { version = "0.14.26", features = ["full"] }
itertools = "0.10.5"
maplit = "1.0.2"
pact_matching = "~1.1.0"
pact_verifier = "~1.0.0"
pact_models = "~1.1.2"
regex = "1.8.2"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tower = { version = "0.4.13", features = [ "full" ] }
tower-service = { version = "0.3.2" }
tower-http = { version = "0.4.0", features = [ "full" ] }
tracing = { version = "0.1.37", features = [ "log" ] }
tracing-core = "0.1.31"
tracing-subscriber = "0.3.17"

[dev-dependencies]
expectest = "0.12.0"
rand = "0.8.5"
pretty_assertions = "1.3.0"
test-log = "0.2.11"
env_logger = "0.10.0"
trycmd = "0.14.16"

[profile.release]
strip = true
opt-level = "z" 
codegen-units = 1
lto = true

# References
# https://doc.rust-lang.org/stable/rustc/codegen-options/
# https://doc.rust-lang.org/rustc/profile-guided-optimization.html
# https://github.com/johnthagen/min-sized-rust