[package]
name = "pact-stub-server"
version = "0.6.3"
edition = "2024"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
description = "Standalone pact stub server"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-stub-server"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.3.0", features = ["env", "std", "cargo"] }
futures = "0.3.28"
http = "1.3.1"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = {version = "0.1.17", features = ["full"] }
itertools = "0.10.5"
maplit = "1.0.2"
mimalloc = "0.1.48"
pact_matching = "~2.0.1"
pact_verifier = "1.3.3"
pact_models = "1.3.7"
regex = "1.12.2"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = [ "full" ] }
tower-service = { version = "0.3.3" }
tower-http = { version = "0.6.6", features = [ "full" ] }
tracing = { version = "0.1.37", features = [ "log" ] }
tracing-core = "0.1.31"
http-body-util = {  version = "0.1.3", features = ["full"] }
http-body = "1.0.1"
bytes = "1"
tracing-subscriber = "0.3.17"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"

[dev-dependencies]
expectest = "0.12.0"
rand = "0.8.5"
pretty_assertions = "1.3.0"
test-log = "0.2.11"
env_logger = "0.10.0"
trycmd = "0.14.16"

[profile.release]
strip = true
opt-level = "z" 
codegen-units = 1
lto = true

# References
# https://doc.rust-lang.org/stable/rustc/codegen-options/
# https://doc.rust-lang.org/rustc/profile-guided-optimization.html
# https://github.com/johnthagen/min-sized-rust

[[bin]]
name = "pact-stub-server"
path = "src/bin.rs"
[lib]
name = "pact_stub_server_cli"
path = "src/lib.rs"